# first_tg_bot

./: .env  .gitignore  bot.db  main.py  pyproject.toml
handlers/: basic.py  buttons.py  conversation.py  user_info.py
utils/: config.py  db.py  logger.py
